# AI-IQ-Test-

./: .gitignore  DASHBOARD_UI_PLAN.md  GHL-INTEGRATION-GUIDE.md  PROJECT_AUDIT_PROGRESS.md  PROJECT_MIGRATION_SUMMARY.md  README.md  STRATEGY_AND_DESIGN.md  SUBSCRIPTION-IMPLEMENTATION-PLAN.md  VAPI-INTEGRATION-GUIDE.md  VERIFICATION_TEST.md  render.yaml  supabase-schema.sql  test_last_session_scenario.md  vapi_enhanced_tool_config.json  vapi_frontend_compatible_schema.json  vapi_function_call_addon.md  vapi_implementation_guide.md  vapi_tool_description_final.md
.github/workflows/: ci.yml
ai-iq-backend/: .env  .env.example  pyproject.toml
ai-iq-backend/app/: ghl_client.py  main.py  models.py  smart_links.py  stripe_client.py  test_engine.py  token_router.py  vapi_client.py
ai-iq-frontend/: .env.example  .env.production  DEPLOYMENT_TRIGGER.md  README-DEPLOYMENT.md  index.html  package-lock.json  package.json  sample-enhanced-data.json  tsconfig.json  vite.config.ts
ai-iq-frontend/src/: App.tsx
ai-iq-frontend/src/components/: SidebarSessions.tsx
ai-iq-frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  toast.tsx
ai-iq-frontend/src/types/: vapi-widget.d.ts
config/: create_json_output_prompt.md  create_json_output_tool.json  dynamic_comprehensive_output_tool.json  test_parameters.json  vapi_integration.json
docs/: BRANCH_STRATEGY.md  DEV_BRANCH_LOGS.md  DIFF_REPORT.md
